[package]
name = "github-learning"
version = "0.3.9"
edition = "2021"
description = "A project to learn github actions and more"
keywords = ["this", "is", "a", "sample", "project"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }

[profile.release]
strip = "debuginfo"
